<resources>
    <string name="app_name" translatable="false">Inmobiliaria</string>
    <string name="new_user">New user</string>
    <string name="log_in">Log in</string>
    <string name="mail">Mail: </string>
    <string name="password">Password: </string>
    <string name="password_placeholder" translatable="false">*********</string>
    <string name="mail_placeholder">exem123@mail.com</string>
    <string name="title">Inmobiliaria</string>
    <string name="login_successful">Login successful!</string>
    <string name="login_failed">Error: </string>
    <string name="create_new_user"> Create a new user</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="phone_placeholder" translatable="false">672123432</string>
    <string name="phone"> Phone: </string>
    <string name="street_placeholder">Street</string>
    <string name="street">Street: </string>
    <string name="city_placeholder">City</string>
    <string name="city">City: </string>
    <string name="nickname_placeholder">nickname</string>
    <string name="nickname">Nickname: </string>
    <string name="about_us">About us</string>
    <string name="home">Home</string>
    <string name="real_estate">Real Estate</string>
    <string name="scanQR">scanQR</string>
    <string name="scanQRbt">Scan QR code to add property</string>
    <string name="edit_user">Edit user</string>
    <string name="log_out">Log out</string>
    <string name="delete_user">Delete user</string>
    <string name="description">Description: </string>
    <string name="price">Price: </string>
    <string name="m2">M2: </string>
    <string name="direction">Direction: </string>
    <string name="date">Date: </string>
    <string name="category">Category: </string>
    <string name="updated">Updated: </string>
    <string name="name">Name: </string>
    <string name="cancel_question">Are you sure you want to cancel?</string>
    <string name="delete_user_question">Are you sure you want to delete this user?</string>
    <string name="delete_property_question">Are you sure you want to delete this property?</string>
    <string name="confirm_delete"> Confirm deletion? </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_property">Edit property</string>
    <string name="new_property">New property</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>


</resources>